--- a/css/main.css
+++ b/css/main.css
@@ -4,3 +4,5 @@
 @import url('navigation.css');
 @import url('cadastro.css');
 @import url('projetos.css');
+@import url('projeto-detalhe.css');
+@import url('contato.css');
